[package]
name = "Proyecto_LSD"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"      # Framework para crear el servidor web
serde = { version = "1.0", features = ["derive"] }  # Para serializar y deserializar datos
serde_json = "1.0"   # Para trabajar con JSON
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls"] } # Para conectarte a PostgreSQL
tokio = { version = "1", features = ["full"] }      # Runtime asíncrono necesario

